--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,15 +15,20 @@
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         <activity
             android:name="com.farova.gridmine.MainMenu"
-            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        
-        
+        <activity
+            android:name="com.farova.gridmine.GameLayout"
+        </activity>
+        <activity
+            android:name="com.farova.gridmine.HighScores"
+        </activity>
+        <activity
+            android:name="com.farova.gridmine.Settings"
+        </activity>
     </application>
 
 </manifest>
